Minor: fix some styling issues around admin UI headers and sidebar overflow.

--- a/crates/assets/js/admin/src/index.css
+++ b/crates/assets/js/admin/src/index.css
@@ -270,14 +270,12 @@
 
 @layer base {
   h1 {
-    @apply text-2xl;
-    @apply mb-2;
+    @apply text-xl;
     font-weight: 700;
   }
 
   h2 {
-    @apply text-xl;
-    @apply mb-2;
+    @apply text-lg;
     font-weight: 700;
   }
 
